Finished DecryptService, in CryptoAppService added base functionalities